# lis_cursor

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  env.example  env.prod.example  pyproject.toml
data/: admin_seed_dataset.csv
data/uploads/: 333a580a-8ab3-4149-b538-b9d9fe83ae6f.csv  37beec42-54a8-4996-b457-36b4ab91a19b.csv  9e595980-9fa3-4f4e-9571-7567fbe15ca3.csv  b98b33c4-5ce4-4efe-9605-5e481c83e12a.csv  fe85a3e5-e874-4174-8c46-7054d5b7ca65.csv
demo/: README.md  index.html
demo/sample_data/: DEMO_SAMPLES_PLAN.md  README.md  SAMPLE_DATA_ENHANCEMENT_PLAN.md  SAMPLE_DATA_TEST_PLAN.md  bi_from_lis.csv  bi_sample.csv  crm_from_lis.csv  lis_orders_sample.csv  scm_sample.csv  transform_lis_to_demo.py
docs/: CURRENT_WORK_SESSION.md
docs/history/: WORK_HISTORY.md
docs/plans/: ide_docs_rules_tabs_cursor_vscode_claude_plan.md  lecture_script_build_workflow_guide.md  lecture_talk_track_2026_03_28.md  lis_ide_docs_rules_public_rollout_plan.md  lis_public_url_path_map.md  plan.md  ppt_aux_instructor_build_guide.html  ppt_aux_instructor_build_guide.md  ppt_google_slides_autogen_script.md  scm_interface_error_validation_plan.md  student_rules_download_lis_plan.md
docs/rules/: backend_architecture.md  dify_integration.md  error_analysis.md  lis_dify_public_troubleshooting.md  production_checklist.md  project_context.md  workflow_gates.md  workflow_review_remediations_2026-03.md
idr_analytics/alembic/: alembic.ini  env.py
idr_analytics/app/: main.py
idr_analytics/tests/: conftest.py
infra/dify/: README.md  docker-compose.idr.yml  nginx.conf.legacy-dify-0.15
infra/ollama/: README.md  apply-dify-host-bind.sh
scripts/: lis_tunnel_to_ga_server.sh  package_student_rules.sh  verify_demo_user_journey_local.py  verify_dify_upstream.py  verify_lis_public_smoke.py
(+86 files in other folders)
